system-ui (1.0.20~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 20:53:33 +0300

system-ui (1.0.19-1) unstable; urgency=high

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 20:03:22 +0300

system-ui (1.0.18-1) unstable; urgency=low

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Artem Egorkine <ext-artem.egorkine@nokia.com>  Thu, 04 Aug 2011 12:00:15 +0300

system-ui (1.0.17-1) unstable; urgency=low

  * Fixes: NB#271768 - Battery low notifications sound/beeps not heard when on call

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 11 Jul 2011 16:48:55 +0300

system-ui (1.0.16-1) unstable; urgency=low

  * Fixes: NB#270432 - (Dis)connecting the USB cable or getting a battery notification may remove other notifications

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 07 Jul 2011 16:42:37 +0300

system-ui (1.0.15-1) unstable; urgency=high

  * Fixes: NB#268139 - Unable to lock the device and time is not displayed in lock mode

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Jun 2011 14:20:10 +0300

system-ui (1.0.14-1) unstable; urgency=low

  * Fixes: NB#265053 - The screen flickers when the touch screen lock transitions to the standby screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 22 Jun 2011 14:49:28 +0300

system-ui (1.0.13-1) unstable; urgency=high

  * Fixes: NB#265924 - Nasty white flicker when powering off the device
  * Fixes: NB#263307 - Button §qtn_tui_clear§ is clipped in notification toolbar in Russian Language

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 16 Jun 2011 12:56:54 +0300

system-ui (1.0.12-1) unstable; urgency=low

  * Fixes: NB#264744 - During device update (SSU) tens of empty notification banners with different icons are shown

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 13 Jun 2011 12:27:00 +0300

system-ui (1.0.11-1) unstable; urgency=low
